content/_generated-doc/2.7/config/quarkus-security.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-security_configuration]]link:#quarkus-security_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-security_quarkus.security.security-providers]]`link:#quarkus-security_quarkus.security.security-providers[quarkus.security.security-providers]`

[.description]
--
List of security providers to enable for reflection
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-security_quarkus.security.deny-unannotated-members]]`link:#quarkus-security_quarkus.security.deny-unannotated-members[quarkus.security.deny-unannotated-members]`

[.description]
--
If set to true, access to all methods of beans that have any security annotations on other members will be denied by default. E.g. if enabled, in the following bean, `methodB` will be denied.  `@`ApplicationScoped public class A ++{++ `@`RolesAllowed("admin") public void methodA() ++{++ ... ++}++ public void methodB() ++{++ ... ++}++ ++}++
--|boolean 
|`false`

|===