content/_generated-doc/3.0/config/quarkus-security.adoc

:summaryTableId: quarkus-security
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-security_configuration]]link:#quarkus-security_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-security_quarkus.security.auth.enabled-in-dev-mode]]`link:#quarkus-security_quarkus.security.auth.enabled-in-dev-mode[quarkus.security.auth.enabled-in-dev-mode]`

[.description]
--
Whether authorization is enabled in dev mode or not. In other launch modes authorization is always enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_AUTH_ENABLED_IN_DEV_MODE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_AUTH_ENABLED_IN_DEV_MODE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-security_quarkus.security.security-providers]]`link:#quarkus-security_quarkus.security.security-providers[quarkus.security.security-providers]`

[.description]
--
List of security providers to register

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_SECURITY_PROVIDERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_SECURITY_PROVIDERS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-security_quarkus.security.deny-unannotated-members]]`link:#quarkus-security_quarkus.security.deny-unannotated-members[quarkus.security.deny-unannotated-members]`

[.description]
--
If set to true, access to all methods of beans that have any security annotations on other members will be denied by default. E.g. if enabled, in the following bean, `methodB` will be denied.  `@`ApplicationScoped public class A ++{++ `@`RolesAllowed("admin") public void methodA() ++{++ ... ++}++ public void methodB() ++{++ ... ++}++ ++}++

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_DENY_UNANNOTATED_MEMBERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_DENY_UNANNOTATED_MEMBERS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-security_quarkus.security.security-provider-config-security-provider-config]]`link:#quarkus-security_quarkus.security.security-provider-config-security-provider-config[quarkus.security.security-provider-config]`

[.description]
--
Security provider configuration

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_SECURITY_PROVIDER_CONFIG+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_SECURITY_PROVIDER_CONFIG+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|

|===